# aoc2024

./: Cargo.toml
benches/: d2_bench.rs
src/: day1.rs  day10.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
